<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">找车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="LoadingPic">正在加载图片</string>
    <string name="unbindAccount">解除绑定</string>
    <string name="unbindAccountSucc">已解除帐号绑定</string>
    <string name="AccountManagement">帐号管理</string>
    <string name="bindNewAccount">绑定帐号</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_cellsite">登录微生活</string>
    <string name="login_label_signin">登录</string>
    <string name="connecting">正在连接服务器...</string>
    <string name="originalPassword_hint">请在此输入初始密码</string>
    <string name="changePassword">修改密码</string>
    <string name="againPassword_hint">请在此再次输入密码</string>
    <string name="submissionChange">提交</string>
    <string name="newPassword_hint">请在此输入新密码</string>
    <string name="change_password_fail">修改密码失败</string>
    <string name="chang_password_suc">修改密码成功！</string>
    <string name="old_password_wrong">原始密码输入错误</string>
    <string name="identifying_code_hint">请在此输入安全码</string>
    <string name="forgotten_password">忘记密码</string>
    <string name="login_temporary">验证码修改密码</string>
    <string name="temporary_code_overtime">验证码已经失效，请重新获取！</string>
    <string name="send_mail_suc">验证码已发送到您的邮箱，请查看您的邮件！</string>
    <string name="forget_password_fail">验证码请求失败，请重试。</string>
    <string name="send_mail_fail">邮件发送失败，请稍后重试。</string>
    <string name="login_name_wrong">用户名错误或者您没有绑定邮箱，密码找回目前只支持绑定邮箱的用户！</string>
    <string name="wrong_temporary_code">验证码输入错误</string>
    <string name="login_mail_wrong">没有找到email地址！请检查用户名是否输入有效或者是否绑定了有效的email！</string>
    <string name="registerViaMobile">使用手机号注册</string>
    <string name="mobile_number">手机号码</string>
    <string name="mobile_number_hint">手机号码</string>
    <string name="get_verify_code">发送验证码</string>
    <string name="verify_code_hint">验证码</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="register">注册</string>
    <string name="name">名字</string>
    <string name="user_exit">用户名已经存在，请再换一个用户名</string>
    <string name="mail_registered">此邮箱已被注册或者账号已被占用，请重填注册信息</string>
    <string name="mobile_registered">此手机号码已被注册或者账号已被占用，请重填注册信息</string>
    <string name="CheckNetwork">请检查网络状态是否正常</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="carrier">运营商</string>
    <string name="wrongphonenumber">手机号码校验失败，请输入正确的手机号码</string>
    <string name="reset_pwd_note">安全验证码已发送到您的邮箱，请输入验证码后重置密码</string>
    <string name="login_label_register">新用户注册</string>
    <string name="register_failed_checkNetwork">注册失败</string>
    <string name="create_horder">发货</string>
    <string name="shipper_address">起点</string>
    <string name="consignee_address">终点</string>
    <string name="shipper_date">发货时间</string>
    <string name="cargo_type">货物类别</string>
    <string name="cargo_weight">货物重量(吨)</string>
    <string name="cargo_weight_vloume">货物重量体积</string>
    <string name="cargo_volume">货物体积(立方米)</string>
    <string name="truck_type">货车类别</string>
    <string name="truck_weight">货车载重</string>
    <string name="truck_length">货车长度</string>
    <string name="horder_desc">其他说明</string>
    <string name="shipper_username">发货人姓名</string>
    <string name="create">创建发货单</string>
    <string name="next_step">下一步</string>
    <string name="portrait">头像</string>
    <string name="username">姓名</string>
    <string name="mobile">手机</string>
    <string name="truck_status">状态</string>
    <string name="truck_status_full">满载</string>
    <string name="truck_status_empty">空载</string>
    <string name="contact_mobile">联系电话</string>
    <string name="truck_license">行驶证</string>
    <string name="truck_photo">车辆照片</string>
    <string name="updateTruckMobile">更改电话</string>
    <string name="save">保存</string>

    <!-- horder list start -->
    <string name="horderlist">货单</string>
    <string name="horder_waiting">未确认货单</string>
    <string name="horder_sent">进行中货单</string>
    <string name="horder_history">历史货单</string>
    <string name="request_driver">意向司机</string>
    <string name="jiedan">接单</string>
    <string name="horder_arrive">送达</string>
    <string name="horder_arrive_confirm">确认签收</string>
    <string name="getting_cargo">取货中</string>
    <string name="confirm_sent_cargo">取货确认</string>
    <string name="waiting_comment">待评价</string>
    <string name="sending_cargo">送货中</string>
    <string name="sent_cargo">已送达</string>
    <string name="confirmed_cargo">已签收</string>
    <!-- horder list end -->
    <!-- horder detail start -->
    <string name="hcd_date">货主选择车主</string>
    <string name="dc_date">车主确认</string>
    <string name="getCargo_date">接货时间</string>
    <string name="sentCargo_date">货物送到</string>
    <string name="confirmSentCargo_date">货主确认</string>

    <!-- horder detail end -->


    <!-- TruckActivity  start -->
    <string name="getPhotoFromCamera">相机拍摄</string>
    <string name="getPhotoFromMemory">手机选择</string>
    <string name="sdcard_occupied">你的存储卡可能被其他程序占用，请关闭可能占用存储卡的程序后重试</string>
    <string name="file_not_found">文件没有找到</string>
    <string name="create_tmp_file_fail">创建临时文件失败</string>
    <string name="choose_portrait">选择头像</string>
    <!-- TruckActivity  start -->


    <!-- Setting  start -->
    <string name="me">我</string>
    <string name="identity">身份证照片</string>
    <string name="driver_lincense_code">驾驶证编号</string>
    <string name="driver_lincense">驾驶证</string>
    <string name="company_name">公司名称</string>
    <string name="company_name_image">公司营业执照</string>
    <string name="find_truck">找车</string>
    <string name="settings">设置</string>
    <string name="about">关于货运</string>
    <string name="exit">退出</string>
    <string name="checkNew">检查新版本</string>
    <string name="version">版本号:</string>
    <string name="version_name">版本名称</string>
    <string name="confirmUnrigster">确认退出</string>
    <string name="KindReminder">温馨提示</string>
    <string name="officialQQ">官方QQ群:</string>
    <string name="officialQQcode">86818203</string>
    <string name="Confirm">确定</string>
    <string name="Cancel">取消</string>
    <string name="confirmquit">确认退出</string>
    <string name="updateName">更改名字</string>
    <string name="updateNameHint">你的姓名</string>
    <string name="check_version">检查更新</string>
    <string name="verify">认证</string>
    <string name="logistics">物流圈</string>

    <!-- Setting  start -->


    <!-- Truck Type Begein -->
    <string name="ttype1">厢式车</string>
    <string name="ttype2">平板车</string>
    <string name="ttype3">高低板车</string>
    <string name="ttype4">高栏车</string>
    <string name="ttype5">中栏车</string>
    <string name="ttype6">低栏车</string>
    <string name="ttype7">罐式车</string>
    <string name="ttype8">冷藏车</string>
    <string name="ttype9">保温车</string>
    <string name="ttype10">危险品车</string>
    <string name="ttype11">铁笼车</string>
    <string name="ttype12">集装箱</string>
    <string name="ttype13">自卸货车</string>
    <string name="ttype14">其他车型</string>
    <!-- Truck Type End -->


    <!-- PULL_TO_REFRESH_listview start -->

    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新...</string>
    <string name="pull_to_refresh_release_label">松开可以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">数据加载中...</string>
    <string name="show_more">显示更多</string>
    <string name="hasShowAll">已显示全部</string>
    <string name="horder_detail">货源详情</string>
    <string name="delete">删除</string>
    <string name="cargo_detail">货源描述</string>
    <string name="truck_desc">车型描述</string>
    <string name="truck_detail">货车详情</string>
    <string name="huoyun_list">货单列表</string>
    <string name="find_huoyun">找货</string>
    <string name="reg_truck">发车</string>
    <!-- PULL_TO_REFRESH_listview end -->

    <string name="truck_list">货车列表</string>
    <string name="truck_location">货车位置</string>
    <string name="driver">司机</string>
    <string name="plate_number">车牌号</string>
    <string name="contact">电话联系</string>
    <string name="tuisong_huo">推送货源</string>
    <string name="note">备注</string>
    <string name="choose_address">请选择地址</string>
    <string name="create_horder_hint">您还有没有创建任何货单，前去创建货单</string>

    <!-- choose driver begin -->
    <string name="choose_driver">选择司机</string>
    <string name="confirm_driver">确定司机</string>
    <string name="cancel_driver">取消司机</string>
    <string name="driver_detail">司机详情</string>

    <!-- choose driver end -->


    <!-- verify Begin -->
    <string name="user_verify">个人资料</string>
    <string name="truck_verify">车辆资料</string>
    <string name="identify_front">身份证正面</string>
    <string name="identify_back">身份证反面</string>
    <string name="driver_license">驾驶证照片</string>
    <string name="truck_info">车辆信息</string>
    <string name="license_plate">车牌号码</string>
    <string name="vehicle_license">行驶证</string>
    <string name="vehicle_photo">车头照片</string>
    <string name="note_bitian">注：＊为必填项</string>
    <string name="submit">提交</string>

</resources>