<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tvPartyTitle"
            style="@style/return_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/horder_detail"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/horder_id_tv"
        android:layout_width="220dp"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/shipper_address"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/shipper_address" />

        <TextView
            android:id="@+id/shipper_address_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/consignee_address"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consignee_address" />

        <TextView
            android:id="@+id/consignee_address_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shipper_date"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipper_date" />

        <TextView
            android:id="@+id/shipper_date_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cargo_type"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_type" />

        <TextView
            android:id="@+id/cargo_type_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/cargo_detail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cargo_weight_rl"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_weight" />

        <TextView
            android:id="@+id/cargo_weight_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/cargo_detail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cargo_volume_rl"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_volume" />

        <TextView
            android:id="@+id/cargo_volume_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/cargo_detail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/truck_detail"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truck_detail" />

        <TextView
            android:id="@+id/truck_type_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/truck_detail" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horder_desc" />

        <TextView
            android:id="@+id/horder_desc_tv"
            android:layout_width="220dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:hint="@string/horder_desc" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/contact_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="callPhone"
            android:text="@string/contact"
            android:textColor="#000000"
            android:textSize="12dp" />

        <Button
            android:id="@+id/req_horder_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="requestHorder"
            android:text="@string/horder_arrive"
            android:textColor="#000000"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>