<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/return_btn_tv"
            style="@style/return_button"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/return_btn_tv"
            android:layout_toRightOf="@id/return_btn_tv"
            android:gravity="center"
            android:text="@string/updateName" />

        <TextView
            android:id="@+id/save_btn_tv"
            style="@style/save_button"
            android:clickable="true"
            android:onClick="saveUsername"
            android:text="@string/save" />
    </RelativeLayout>

    <EditText
        android:id="@+id/update_username_et"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp" />
    
     
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"

            android:gravity="center"
            android:text="@string/updateNameHint" />

</LinearLayout>